fixed quit option