@@ -3,11 +3,15 @@ package server.net;
 import common.Message;
 import common.MessageDTO;
 import server.model.HangmanGame;
+import server.model.ServerLogs;
 
 import java.io.*;
 import java.nio.ByteBuffer;
 import java.nio.channels.SocketChannel;
+import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Date;
+import java.util.LinkedList;
 import java.util.concurrent.ForkJoinPool;
 
 public class ClientHandler implements Runnable{
@@ -15,7 +19,8 @@ public class ClientHandler implements Runnable{
     private HangmanServer hangmanServer;
     private SocketChannel clientChannel;
     private HangmanGame hangmanGame = new HangmanGame();
-    private ArrayList<Message> incomingMessageList = new ArrayList<Message>();
+    private LinkedList<Message> incomingMessageList = new LinkedList<>();
+    private ServerLogs logs = new ServerLogs();
 
     public ClientHandler(HangmanServer hangmanServer, SocketChannel clientChannel){
         this.clientChannel = clientChannel;
@@ -25,20 +30,26 @@ public class ClientHandler implements Runnable{
     public void run(){
         while (!incomingMessageList.isEmpty()) {
             try {
-                Message msg = incomingMessageList.get(0);
+                Message msg = incomingMessageList.getFirst();
+                String timeStamp = new SimpleDateFormat("yyyy.MM.dd.HH.mm.ss").format(new Date());
                 switch (msg.getType()) {
                     case USERNAME:
-                        incomingMessageList.remove(0);
+                        incomingMessageList.removeFirst();
                         hangmanGame.changeUsername(msg.getBody());
                         hangmanServer.sendGameStateToClient(hangmanGame.newGame());
                         break;
                     case GUESS:
-                        incomingMessageList.remove(0);
+                        incomingMessageList.removeFirst();
                         hangmanServer.sendGameStateToClient(hangmanGame.makeGuess(msg.getBody()));
                         break;
                     case RESTART:
-                        incomingMessageList.remove(0);
+                        incomingMessageList.removeFirst();
                         hangmanServer.sendGameStateToClient(hangmanGame.newGame());
+                        break;
+                    case QUIT:
+                        logs.appendEntry(timeStamp+": user @"+hangmanGame.getUsername()+" disconnected.\n");
+                        incomingMessageList.removeFirst();
+                        disconnectClient();
                         break;
                     default:
                         disconnectClient();
@@ -56,7 +67,7 @@ public class ClientHandler implements Runnable{
         ObjectInputStream objectInputStream = new ObjectInputStream(byteArrayInputStream);
         try{
             Message msg = (Message)objectInputStream.readObject();
-            incomingMessageList.add(msg);
+            incomingMessageList.addLast(msg);
             ForkJoinPool.commonPool().execute(this);
         }catch (ClassNotFoundException e){
             //some error
